# rust_mobile_secrets_vault

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PUBLISH.md  README.md
examples/: basic_usage.rs  builder_pattern.rs  key_rotation.rs
src/: audit.rs  cli.rs  encryption.rs  error.rs  lib.rs  vault.rs
tests/: integration_test.rs
