[package]
name = "rust_mobile_secrets_vault"
version = "0.2.0"
edition = "2021"
description = "A secure, encrypted secrets vault for mobile-backend or embedded Rust services with versioning and key rotation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/emorilebo/rust_mobile_secrets_vault"
readme = "README.md"
keywords = ["secrets", "vault", "encryption", "mobile", "security"]
categories = ["cryptography", "command-line-utilities"]
exclude = ["target", ".github", "tests", ".gitignore"]

[dependencies]
aes-gcm = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
base64 = "0.21"
zeroize = { version = "1.7", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[[bin]]
name = "vault"
path = "src/bin/vault.rs"
